Implement SizeTieredCompaction (#148)
* Implement SizeTieredCompaction

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Fix forbiddenAPI check

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Add tests

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Increase coverage

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Handle index closing failure

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Address review comments

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Refactor retention

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Fix merge conflict

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* refactor

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Address review comments

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Rebase & resolve conflicts

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Fix reder refresh logic & update log messages

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Take resolution from setting

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

* Add comment

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>

---------

Signed-off-by: bhavik.patel <bhavik.patel@uber.com>
Signed-off-by: Bhavik <bhavik.patel@uber.com>